# jupyter-doexport

./: .gitattributes  .gitignore  CITATION.cff  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  test.do  test.ipynb
jupyter_doexport/: __init__.py  _version.py  magic_convert.py
jupyter_doexport/templates/: dofile.tpl
jupyter_doexport/templates/dofile/: dofile.do.j2
jupyter_doexport/templates/dofile_output/: dofile_output.do.j2
statadoexport/: __init__.py  magic_convert.py
statadoexport/templates/: statado.tpl
test/: test.do  test.ipynb  test_dofile_template_found.py  test_with_output.do
