[tool.poetry]
name = "jupyter-doexport"
version = "0.0.0"
description = "A package to convert jupyter notebooks to Stata do-files"
authors = ["Aleksandr Michuda <amichuda@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/amichuda/jupyter-doexport"

[tool.poetry.dependencies]
python = "^3.9"
nbconvert = "^6.3.0"

[tool.poetry.dev-dependencies]
stata-kernel = "^1.12.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"